[project]
name = "langgraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1.9",
    "langgraph-prebuilt>=1.0.11",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-supervisor>=0.0.31",
    "langgraph-swarm>=0.1.0",
    "langmem>=0.0.30",
    "langgraph-cli>=0.4.24",
    "langgraph-sdk>=0.3.13",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "openai>=2.24.0",
    "playwright>=1.59.0",
    "langgraph-checkpoint-postgres>=3.0.5",
]
